--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "bootstrap": "5.1.3",
+    "classnames": "^2.3.1",
+    "jquery": "^3.6.0",
     "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-newline-to-break": "^1.0.6",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.0"
   },
